--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,15 +1,20 @@
 <header
-  class="w-[calc(100%-14rem)] h-16 ml-56 sticky top-0 right-0 z-40 px-2 bg-violet-900 text-violet-200 drop-shadow-xl flex items-center justify-between"
+  class="w-full h-16 sticky left-0 top-0 right-0 z-40 px-5 bg-violet-900 text-violet-200 drop-shadow-xl flex items-center"
 >
-  <!-- <h4>
-    ID<span>: </span><strong>{{ loggedIn()?.id }}</strong>
-  </h4> -->
-  <button class="px-4 py-2 flex items-center gap-3 ms-auto">
-    <img src="assets/icons/account.svg" alt="profile" />
-    <span class="font-medium"
-      >ID {{ loggedIn()?.id }} - {{ loggedIn()?.name }}
-      {{ loggedIn()?.lastName }}</span
-    >
-    <img src="assets/icons/expand_more.svg" alt="more" />
-  </button>
+  <ul class="flex items-center justify-between w-full">
+    <li class="flex items-center gap-2 px-4 py-2">
+      <img src="assets/icons/computer.svg" alt="computer" />
+      <h1 class="text-xl font-semibold">Servinet</h1>
+    </li>
+    <li>
+      <button class="px-4 py-2 flex items-center gap-3 ms-auto">
+        <img src="assets/icons/account.svg" alt="profile" />
+        <span class="font-medium"
+          >ID {{ loggedIn()?.id }} - {{ loggedIn()?.name }}
+          {{ loggedIn()?.lastName }}</span
+        >
+        <img src="assets/icons/expand_more.svg" alt="more" />
+      </button>
+    </li>
+  </ul>
 </header>
