--- a/src/app/modules/shared/components/nav/nav.component.html
+++ b/src/app/modules/shared/components/nav/nav.component.html
@@ -1,39 +1,31 @@
 <nav
-  class="w-56 h-screen fixed px-5 left-0 top-0 bottom-0 bg-violet-900 text-violet-200 flex flex-col justify-between"
+  class="w-56 h-[calc(100vh-4rem)] fixed px-5 py-5 left-0 top-16 bottom-0 bg-violet-200 text-gray-700 flex flex-col justify-between border-r border-gray-50"
 >
-  <section>
-    <header class="h-16 flex items-center gap-2 mb-5 px-4 py-2">
-      <img src="assets/icons/computer.svg" alt="computer" />
-      <h1 class="text-xl font-semibold">Servinet</h1>
-    </header>
-    <ul class="flex flex-col gap-5">
-      <li *ngFor="let route of routes(); index as i">
-        <a
-          [routerLink]="route.route"
-          routerLinkActive="bg-violet-700 text-violet-50"
-          class="flex items-center gap-2 px-4 py-2 rounded-xl font-medium hover:bg-violet-700"
-        >
-          <img
-            [src]="'assets/icons/' + route.icon + '.svg'"
-            [alt]="route.title"
-          />
-          <span class="text-lg">{{ route.title }}</span>
-        </a>
-      </li>
-    </ul>
-  </section>
-  <section class="mb-5">
-    <ul>
-      <li>
-        <a
-          (click)="logout()"
-          class="flex items-center gap-2 px-4 py-2 rounded-xl hover:bg-violet-700 cursor-pointer"
-        >
-          <img src="assets/icons/logout.svg" alt="logout" />
-          <span class="text-lg font-medium">Cerrar sesión</span>
-        </a>
-      </li>
-    </ul>
-  </section>
+  <ul class="flex flex-col gap-5">
+    <li *ngFor="let route of routes(); index as i">
+      <a
+        [routerLink]="route.route"
+        routerLinkActive="bg-violet-300 text-gray-800"
+        class="flex items-center gap-2 px-4 py-2 rounded-xl font-medium hover:bg-violet-300"
+      >
+        <img
+          [src]="'assets/icons/' + route.icon + '.svg'"
+          [alt]="route.title"
+        />
+        <span class="text-lg">{{ route.title }}</span>
+      </a>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <a
+        (click)="logout()"
+        class="flex items-center gap-2 px-4 py-2 rounded-xl hover:bg-violet-300 cursor-pointer"
+      >
+        <img src="assets/icons/logout.svg" alt="logout" />
+        <span class="text-lg font-medium">Cerrar sesión</span>
+      </a>
+    </li>
+  </ul>
 </nav>
 <app-loading [loading]="loading"></app-loading>
