--- a/src/app/modules/portal/pages/my-cash/components/base-calculator-form/base-calculator-form.component.html
+++ b/src/app/modules/portal/pages/my-cash/components/base-calculator-form/base-calculator-form.component.html
@@ -1,23 +1,39 @@
-<form>
-  <div class="grid grid-cols-4 text-center text-gray-700 font-medium">
-    <h5>Valor</h5>
-    <h5 class="col-span-2">Cantidad</h5>
-    <h5>Total</h5>
+<form class="gap-0 px-5">
+  <div
+    class="grid grid-cols-3 items-center gap-5 text-center text-gray-700 font-medium px-5 border-b-2 border-gray-300"
+  >
+    <h4>Denominación</h4>
+    <h4 class="border-l-2 border-r-2 border-gray-300">Cantidad</h4>
+    <h4>Total</h4>
   </div>
   <div
-    class="grid grid-cols-4 items-center gap-x-5 text-right text-gray-700"
-    *ngFor="let base of cashBase"
+    class="grid grid-cols-3 items-center gap-5 px-5 text-right border-b-2 border-gray-300"
+    *ngFor="let cash of cashBase"
   >
-    <label [for]="base.title">{{
-      base.value | currency : "symbol" : "$" : "0.00"
+    <label [for]="cash.title" class="font-normal peer">{{
+      cash.value | currency : "Symbol" : "$" : "0.00"
     }}</label>
     <input
       type="number"
-      [id]="base.title"
+      [id]="cash.title"
       placeholder="0"
-      class="text-right col-span-2"
+      class="cash_amount_input"
     />
-    <p>{{ "0" | currency : "symbol" : "$" : "0.00" }}</p>
+    <span class="text-gray-800">{{
+      "0" | currency : "Symbol" : "$" : "0.00"
+    }}</span>
   </div>
-  <app-button type="submit" class="mt-3">Guardar base inicial</app-button>
+  <div class="grid grid-cols-3 items-center gap-5 text-right px-5">
+    <label for="total">Total</label>
+    <input
+      type="number"
+      id="total"
+      placeholder="0"
+      class="cash_amount_input"
+      disabled
+    />
+    <span class="text-gray-800 font-medium">{{
+      "0" | currency : "Symbol" : "$" : "0.00"
+    }}</span>
+  </div>
 </form>
