--- a/src/styles.css
+++ b/src/styles.css
@@ -27,10 +27,25 @@ label {
   @apply block text-gray-700 font-medium;
 }
 
+.cash_amount_input {
+  @apply px-3 py-1 focus:outline-none text-right border-l-2 border-r-2 border-gray-300;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: none;
+}
+
 input[type="text"],
 input[type="email"],
 input[type="password"],
-input[type="number"],
+input[type="number"]:not(.cash_amount_input),
 input[type="time"],
 select {
   @apply w-full rounded-lg px-4 py-2 border border-gray-300 bg-gray-50 text-gray-700 focus:ring-1 focus:ring-blue-500 focus:border-blue-500 focus:outline-none;
