--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -37,12 +37,20 @@
       >
     </form>
   </section>
-  <section class="max-w-xl m-auto card" *ngIf="isCountingBase()">
-    <header>
-      <h3 class="text-lg text-gray-700 text-center font-medium mb-3">
-        Cuenta o verifica la base inicial para finalizar la apertura de caja.
-      </h3>
-    </header>
-    <app-base-calculator-form />
+  <section
+    class="max-w-5xl m-auto grid grid-cols-3 gap-5 items-end"
+    *ngIf="isCountingBase()"
+  >
+    <div class="card col-span-2">
+      <header>
+        <h3 class="text-lg text-gray-700 text-center font-medium mb-3">
+          Cuenta o verifica la base inicial para finalizar la apertura de caja.
+        </h3>
+      </header>
+      <app-base-calculator-form />
+    </div>
+    <app-button type="button" class="w-full col-span-1"
+      >Terminar apertura</app-button
+    >
   </section>
 </ng-container>
