--- a/src/app/modules/portal/pages/my-cash/components/base-calculator-form/base-calculator-form.component.html
+++ b/src/app/modules/portal/pages/my-cash/components/base-calculator-form/base-calculator-form.component.html
@@ -1,4 +1,4 @@
-<form class="gap-0 px-5">
+<form class="gap-0 px-5" [formGroup]="baseForm" (ngSubmit)="calculate()">
   <div
     class="grid grid-cols-3 items-center gap-5 text-center text-gray-700 font-medium px-5 border-b-2 border-gray-300"
   >
@@ -8,32 +8,34 @@
   </div>
   <div
     class="grid grid-cols-3 items-center gap-5 px-5 text-right border-b-2 border-gray-300"
-    *ngFor="let cash of cashBase"
+    *ngFor="let cash of cashBase()"
   >
     <label [for]="cash.title" class="font-normal peer">{{
       cash.value | currency : "Symbol" : "$" : "0.00"
     }}</label>
     <input
-      type="number"
+      type="text"
       [id]="cash.title"
       placeholder="0"
       class="cash_amount_input"
+      [formControlName]="cash.title"
     />
     <span class="text-gray-800">{{
-      "0" | currency : "Symbol" : "$" : "0.00"
+      cash.total | currency : "Symbol" : "$" : "0.00"
     }}</span>
   </div>
   <div class="grid grid-cols-3 items-center gap-5 text-right px-5">
     <label for="total">Total</label>
     <input
-      type="number"
+      type="text"
       id="total"
-      placeholder="0"
       class="cash_amount_input"
+      [value]="totalAmount()"
       disabled
     />
     <span class="text-gray-800 font-medium">{{
-      "0" | currency : "Symbol" : "$" : "0.00"
+      total() | currency : "Symbol" : "$" : "0.00"
     }}</span>
   </div>
+  <app-button type="submit" class="mt-3">Calcular</app-button>
 </form>
