--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -32,9 +32,7 @@
           formControlName="initialWorking"
         />
       </div>
-      <app-button type="submit" class="mt-3"
-        >Registrar hora de entrada</app-button
-      >
+      <app-button type="submit" class="mt-3">Continuar</app-button>
     </form>
   </section>
   <section
@@ -47,10 +45,7 @@
           Cuenta o verifica la base inicial para finalizar la apertura de caja.
         </h3>
       </header>
-      <app-base-calculator-form />
+      <app-base-calculator-form (calculateBase)="finish($event)" />
     </div>
-    <app-button type="button" class="w-full col-span-1"
-      >Terminar apertura</app-button
-    >
   </section>
 </ng-container>
