temporal: register cash opening

--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -47,5 +47,6 @@
       </header>
       <app-base-calculator-form (calculateBase)="finish($event)" />
     </div>
+    <div class="card col-span-1"></div>
   </section>
 </ng-container>
