feat: load initial balances

--- a/src/app/modules/portal/pages/balances/balances.component.html
+++ b/src/app/modules/portal/pages/balances/balances.component.html
@@ -1,73 +1,5 @@
-<main>
-  <section class="platforms-page">
-    <header class="platforms-page__header">
-      <h2>Listado de plataformas</h2>
-      <p>
-        Haz click en la plataforma correspondiente para añadir y/o actualizar su
-        saldo inicial y final.
-      </p>
-    </header>
-    <section class="info" *ngIf="balances.length < 1">
-      <header>
-        <h2>Parece que no hay saldos el día de hoy...</h2>
-        <p>Usa el botón de abajo para iniciarlos.</p>
-      </header>
-      <div class="divider"></div>
-      <button (click)="loadInitialBalances()">Iniciar Saldos</button>
-    </section>
-    <div class="container" *ngIf="balances.length >= 1">
-      <article
-        class="card"
-        *ngFor="let balance of balances"
-        (click)="openModal(balance)"
-      >
-        <header>
-          <h3>{{ balance.platformName }}</h3>
-        </header>
-        <section>
-          <p>
-            <span>Saldo Inicial</span>
-            <span>${{ balance.initialBalance }}</span>
-          </p>
-          <p>
-            <span>Saldo Final</span>
-            <span>${{ balance.finalBalance }}</span>
-          </p>
-        </section>
-      </article>
-    </div>
-  </section>
-  <app-modal
-    modalId="balance-modal"
-    [modalTitle]="selectedBalance?.platformName"
-  >
-    <section>
-      <form
-        [formGroup]="balanceForm"
-        class="form-spacing"
-        (ngSubmit)="onSubmit()"
-      >
-        <div>
-          <label for="initialBalance">Saldo Inicial</label>
-          <input
-            type="text"
-            id="initialBalance"
-            formControlName="initialBalance"
-          />
-          <strong *ngIf="hasError('initialBalance', 'required')"
-            >El saldo inicial es requerido</strong
-          >
-        </div>
-        <div>
-          <label for="finalBalance">Saldo Final</label>
-          <input type="text" id="finalBalance" formControlName="finalBalance" />
-          <strong *ngIf="hasError('finalBalance', 'required')"
-            >El saldo final es requerido</strong
-          >
-        </div>
-        <button type="submit">Actualizar Saldos</button>
-      </form>
-    </section>
-  </app-modal>
-</main>
-<app-loading [loading]="balanceStatus === 'loading'"></app-loading>
+<app-header-title
+  hTitle="Saldos"
+  hDescription="Listado de todas las plataformas con sus saldos del día"
+  hDescriptionSecondLine="Eres libre de editarlos hasta el cierre de caja"
+></app-header-title>
