--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-violet-50;
+  @apply bg-violet-50 bg-opacity-50;
 }
 
 .row-spacing {
@@ -47,6 +47,7 @@ input[type="email"],
 input[type="password"],
 input[type="number"],
 input[type="time"],
+input[type="search"],
 select {
   @apply w-full rounded-lg px-4 py-2 border border-gray-300 bg-gray-50 text-gray-700 focus:ring-1 focus:ring-blue-500 focus:border-blue-500 focus:outline-none;
 }
