feat: link platform balances with api and update ui

--- a/src/app/modules/admin/pages/users/components/filter-by-enabled/filter-by-enabled.component.html
+++ b/src/app/modules/admin/pages/users/components/filter-by-enabled/filter-by-enabled.component.html
@@ -1,4 +1,4 @@
-<form class="flex-row">
+<form class="form flex-row">
   <div class="control-row">
     <input type="radio" id="all" value="all" name="enabled" checked />
     <label for="all" class="font-normal">Todos</label>
