--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -1,11 +1,16 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="form">
+<form class="form" (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="control">
     <label for="code">Ingresa tu código</label>
-    <input type="text" id="code" formControlName="code" />
+    <input type="text" id="code" class="input" formControlName="code" />
   </div>
   <div class="control">
     <label for="password">Contraseña</label>
-    <input type="password" id="password" formControlName="password" />
+    <input
+      type="password"
+      id="password"
+      class="input"
+      formControlName="password"
+    />
   </div>
   <app-button type="submit" class="mt-2">Iniciar sesión</app-button>
   <a
