--- a/src/app/modules/portal/pages/platforms/platforms.component.html
+++ b/src/app/modules/portal/pages/platforms/platforms.component.html
@@ -101,21 +101,44 @@
           </ng-template>
         </section>
         <div class="divider-md my-3"></div>
-        <footer class="w-full">
+        <footer class="w-full px-2.5">
+          <header class="mb-1">
+            <h2 class="text-gray-700 text-lg font-medium">
+              Nueva transferencia
+            </h2>
+          </header>
           <form
-            class="w-full flex items-center gap-5"
+            class="w-full flex flex-wrap justify-between items-center gap-3"
             [formGroup]="transferForm"
             (ngSubmit)="onTransferSubmit()"
           >
+            <div>
+              <label
+                for="voucher"
+                class="px-3 py-2 border border-gray-300 bg-gray-50 rounded-lg text-gray-700 text-sm cursor-pointer"
+                >{{
+                  voucherPicked()
+                    ? voucherPicked()?.name
+                    : "Adjuntar comprobante"
+                }}</label
+              >
+              <input
+                type="file"
+                id="voucher"
+                class="sr-only"
+                (change)="onVoucherPicked($event)"
+              />
+            </div>
             <input
               type="number"
               id="transfer-value"
-              class="input w-4/6"
+              placeholder="10000"
+              class="input"
               formControlName="value"
             />
             <button
               type="submit"
-              class="w-2/6 cursor-pointer text-cyan-700 text-lg hover:text-cyan-600 hover:underline hover:underline-offset-2"
+              class="cursor-pointer text-cyan-700 text-lg hover:text-cyan-600 hover:underline hover:underline-offset-2"
             >
               Añadir transferencia
             </button>
