--- a/src/app/modules/portal/pages/platforms/platforms.component.html
+++ b/src/app/modules/portal/pages/platforms/platforms.component.html
@@ -5,24 +5,7 @@
 ></app-header-title>
 <section class="w-full grid grid-cols-3 gap-x-5">
   <article class="card col-span-1">
-    <header class="h-12 mb-2 flex items-center justify-center">
-      <input
-        class="input w-full"
-        type="search"
-        id="search-platform"
-        placeholder="Buscar plataforma"
-      />
-    </header>
-    <ul class="flex flex-col gap-1">
-      <li
-        *ngFor="let platform of platforms(); index as i"
-        class="text-gray-800 text-lg px-2 py-1 rounded-md cursor-pointer hover:bg-violet-100"
-        [ngClass]="i == selectedPlatformIndex() ? 'bg-violet-100' : ''"
-        (click)="onSelectPlatform(platform, i)"
-      >
-        {{ platform.platformName }}
-      </li>
-    </ul>
+    <app-platform-balance-list></app-platform-balance-list>
   </article>
   <article class="card col-span-2 flex items-center w-full">
     <div class="w-full">
@@ -36,69 +19,12 @@
       </header>
       <ng-container *ngIf="selectedPlatformBalance()">
         <section>
-          <form
-            [formGroup]="balanceForm"
-            (ngSubmit)="onBalancesSubmit()"
-            class="form"
-            *ngIf="editingBalances(); else platform_info"
-          >
-            <div class="control">
-              <label for="initialBalance">Saldo Inicial</label>
-              <input
-                type="number"
-                id="initialBalance"
-                class="input"
-                formControlName="initialBalance"
-              />
-            </div>
-            <div class="control">
-              <label for="finalBalance">Saldo Final</label>
-              <input
-                type="number"
-                id="finalBalance"
-                class="input"
-                formControlName="finalBalance"
-              />
-            </div>
-            <app-button type="submit">Guardar</app-button>
-          </form>
-          <ng-template #platform_info>
-            <div class="flex flex-col gap-2.5 mb-3">
-              <p class="text-gray-700 flex items-center justify-between">
-                <span>Saldo Inicial</span>
-                <span class="font-medium">{{
-                  selectedPlatformBalance()?.initialBalance
-                    | currency : "symbol" : "$" : "0.00"
-                }}</span>
-              </p>
-              <div class="divider"></div>
-              <p class="text-gray-700 flex items-center justify-between">
-                <span>Saldo Final</span>
-                <span class="font-medium">{{
-                  selectedPlatformBalance()?.finalBalance
-                    | currency : "symbol" : "$" : "0.00"
-                }}</span>
-              </p>
-              <div class="divider"></div>
-              <p class="text-gray-700 flex items-center justify-between">
-                <span>Transferencias del día</span>
-                <span class="font-medium">0</span>
-              </p>
-              <div class="divider"></div>
-              <p class="text-gray-700 flex items-center justify-between">
-                <span>Total transferido</span>
-                <span class="font-medium">{{
-                  0 | currency : "symbol" : "$" : "0.00"
-                }}</span>
-              </p>
-            </div>
-            <app-button
-              type="button"
-              color="neutral"
-              (click)="handleEditingBalances()"
-              >Editar Saldos</app-button
-            >
-          </ng-template>
+          <app-update-platform-balances-form
+            *ngIf="editing()"
+          ></app-update-platform-balances-form>
+          <app-platform-balance-info
+            *ngIf="!editing()"
+          ></app-platform-balance-info>
         </section>
         <div class="divider-md my-3"></div>
         <footer class="w-full px-2.5">
