--- a/src/app/modules/portal/pages/platforms/components/platform-balance-info/platform-balance-info.component.html
+++ b/src/app/modules/portal/pages/platforms/components/platform-balance-info/platform-balance-info.component.html
@@ -2,7 +2,7 @@
   <p class="text-gray-700 flex items-center justify-between">
     <span>Saldo Inicial</span>
     <span class="font-medium">{{
-      selectedPlatformBalance()?.initialBalance
+      selectedPortalPlatform()?.initialBalance
         | currency : "symbol" : "$" : "0.00"
     }}</span>
   </p>
@@ -10,20 +10,23 @@
   <p class="text-gray-700 flex items-center justify-between">
     <span>Saldo Final</span>
     <span class="font-medium">{{
-      selectedPlatformBalance()?.finalBalance
+      selectedPortalPlatform()?.finalBalance
         | currency : "symbol" : "$" : "0.00"
     }}</span>
   </p>
   <div class="divider"></div>
   <p class="text-gray-700 flex items-center justify-between">
     <span>Transferencias del día</span>
-    <span class="font-medium">0</span>
+    <span class="font-medium">{{
+      selectedPortalPlatform()?.transfersAmount
+    }}</span>
   </p>
   <div class="divider"></div>
   <p class="text-gray-700 flex items-center justify-between">
     <span>Total transferido</span>
     <span class="font-medium">{{
-      0 | currency : "symbol" : "$" : "0.00"
+      selectedPortalPlatform()?.transfersTotal
+        | currency : "symbol" : "$" : "0.00"
     }}</span>
   </p>
 </div>
