--- a/src/app/modules/admin/pages/users/components/filter-by-enabled/filter-by-enabled.component.html
+++ b/src/app/modules/admin/pages/users/components/filter-by-enabled/filter-by-enabled.component.html
@@ -1,13 +1,13 @@
-<form class="form flex-row">
-  <div class="control-row">
+<form class="flex items-center gap-3">
+  <div class="flex items-center gap-1.5">
     <input type="radio" id="all" value="all" name="enabled" checked />
     <label for="all" class="font-normal">Todos</label>
   </div>
-  <div class="control-row">
+  <div class="flex items-center gap-1.5">
     <input type="radio" id="enabled" value="enabled" name="enabled" />
     <label for="enabled" class="font-normal">Habilitado</label>
   </div>
-  <div class="control-row">
+  <div class="flex items-center gap-1.5">
     <input type="radio" id="disabled" value="disabled" name="enabled" />
     <label for="disabled" class="font-normal">Deshabilitado</label>
   </div>
