--- a/src/app/modules/admin/pages/users/components/filter-by-role/filter-by-role.component.html
+++ b/src/app/modules/admin/pages/users/components/filter-by-role/filter-by-role.component.html
@@ -1,6 +1,6 @@
-<form class="flex-row">
+<form class="flex items-center">
   <label for="role" class="w-44">Filtrar por Rol:</label>
-  <select id="role" class="px-2 py-0.5">
+  <select id="role" class="input w-full">
     <option value="">Todos</option>
     <option value="">Cajero</option>
     <option value="">Supervisor</option>
