--- a/src/app/modules/admin/pages/cash/components/new-cash-register-form/new-cash-register-form.component.html
+++ b/src/app/modules/admin/pages/cash/components/new-cash-register-form/new-cash-register-form.component.html
@@ -1,11 +1,16 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
+<form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="numeral">Número de caja</label>
-    <input type="number" id="numeral" formControlName="numeral" />
+    <input type="number" id="numeral" formControlName="numeral" class="input" />
   </div>
   <div class="control">
     <label for="description">Descripción</label>
-    <input type="text" id="description" formControlName="description" />
+    <input
+      type="text"
+      id="description"
+      formControlName="description"
+      class="input"
+    />
   </div>
   <app-button type="submit" class="mt-3"
     >Registrar caja registradora</app-button
