--- a/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
+++ b/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
@@ -1,15 +1,20 @@
-<form class="px-5" [formGroup]="form" (ngSubmit)="onSubmit()">
+<form class="form px-5" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="name">Nombre</label>
-    <input type="text" id="name" formControlName="name" />
+    <input type="text" id="name" formControlName="name" class="input" />
   </div>
   <div class="control">
     <label for="lastName">Apellido(s)</label>
-    <input type="text" id="lastName" formControlName="lastName" />
+    <input type="text" id="lastName" formControlName="lastName" class="input" />
   </div>
   <div class="control">
     <label for="password">Contraseña</label>
-    <input type="password" id="password" formControlName="password" />
+    <input
+      type="password"
+      id="password"
+      formControlName="password"
+      class="input"
+    />
   </div>
   <div class="control">
     <label for="repeatPassword">Confirma la contraseña</label>
@@ -17,17 +22,18 @@
       type="password"
       id="repeatPassword"
       formControlName="repeatPassword"
+      class="input"
     />
   </div>
   <div class="control">
     <label for="role">Rol de usuario</label>
-    <select id="role" formControlName="role">
+    <select id="role" formControlName="role" class="input">
       <option value="CASHIER">CAJERO</option>
       <option value="SUPERVISOR">SUPERVISOR</option>
       <option value="ADMIN">ADMINISTRADOR</option>
     </select>
   </div>
-  <section class="mt-3 row-spacing">
+  <section class="mt-3 flex flex-col gap-3">
     <app-button type="submit">Registrar</app-button>
     <app-button type="button" color="neutral" (click)="emitOnCancel()"
       >Cancelar</app-button
