--- a/src/app/modules/admin/pages/cash/components/new-cash-register-form/new-cash-register-form.component.html
+++ b/src/app/modules/admin/pages/cash/components/new-cash-register-form/new-cash-register-form.component.html
@@ -1,18 +1,25 @@
 <form class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="numeral">Número de caja</label>
-    <input type="number" id="numeral" formControlName="numeral" class="input" />
+    <input
+      type="number"
+      id="numeral"
+      [readOnly]="loading()"
+      formControlName="numeral"
+      class="input"
+    />
   </div>
   <div class="control">
     <label for="description">Descripción</label>
     <input
       type="text"
       id="description"
+      [readOnly]="loading()"
       formControlName="description"
       class="input"
     />
   </div>
-  <app-button type="submit" class="mt-3"
+  <app-button type="submit" [loading]="loading()" class="mt-3"
     >Registrar caja registradora</app-button
   >
 </form>
