--- a/src/app/modules/admin/pages/platforms/components/new-platform-form/new-platform-form.component.html
+++ b/src/app/modules/admin/pages/platforms/components/new-platform-form/new-platform-form.component.html
@@ -5,11 +5,11 @@
       <input
         type="text"
         id="name"
+        [readOnly]="loading()"
         formControlName="name"
         class="w-full input"
       />
-      <app-button type="submit">Registrar</app-button>
+      <app-button type="submit" [loading]="loading()">Registrar</app-button>
     </div>
   </div>
 </form>
-<app-loading [loading]="loading()"></app-loading>
