--- a/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
+++ b/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
@@ -1,17 +1,30 @@
 <form class="form px-5" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="name">Nombre</label>
-    <input type="text" id="name" formControlName="name" class="input" />
+    <input
+      type="text"
+      id="name"
+      [readOnly]="loading()"
+      formControlName="name"
+      class="input"
+    />
   </div>
   <div class="control">
     <label for="lastName">Apellido(s)</label>
-    <input type="text" id="lastName" formControlName="lastName" class="input" />
+    <input
+      type="text"
+      id="lastName"
+      [readOnly]="loading()"
+      formControlName="lastName"
+      class="input"
+    />
   </div>
   <div class="control">
     <label for="password">Contraseña</label>
     <input
       type="password"
       id="password"
+      [readOnly]="loading()"
       formControlName="password"
       class="input"
     />
@@ -21,21 +34,31 @@
     <input
       type="password"
       id="repeatPassword"
+      [readOnly]="loading()"
       formControlName="repeatPassword"
       class="input"
     />
   </div>
   <div class="control">
     <label for="role">Rol de usuario</label>
-    <select id="role" formControlName="role" class="input">
+    <select
+      id="role"
+      formControlName="role"
+      [disabled]="loading()"
+      class="input"
+    >
       <option value="CASHIER">CAJERO</option>
       <option value="SUPERVISOR">SUPERVISOR</option>
       <option value="ADMIN">ADMINISTRADOR</option>
     </select>
   </div>
   <section class="mt-3 flex flex-col gap-3">
-    <app-button type="submit">Registrar</app-button>
-    <app-button type="button" color="neutral" (click)="emitOnCancel()"
+    <app-button type="submit" [loading]="loading()">Registrar</app-button>
+    <app-button
+      type="button"
+      color="neutral"
+      [disabled]="loading()"
+      (click)="emitOnCancel()"
       >Cancelar</app-button
     >
   </section>
