--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -16,7 +16,8 @@
       </div>
       <div class="divider"></div>
       <app-filter-by-enabled></app-filter-by-enabled>
-      <app-users-list></app-users-list>
+      <app-spinner [loading]="loading"></app-spinner>
+      <app-users-list *ngIf="!loading()"></app-users-list>
     </div>
   </div>
 </section>
