--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -1,18 +1,27 @@
 <form class="form" (ngSubmit)="onSubmit()" [formGroup]="form">
   <div class="control">
     <label for="code">Ingresa tu código</label>
-    <input type="text" id="code" class="input" formControlName="code" />
+    <input
+      type="text"
+      id="code"
+      [readOnly]="loading()"
+      class="input"
+      formControlName="code"
+    />
   </div>
   <div class="control">
     <label for="password">Contraseña</label>
     <input
       type="password"
       id="password"
+      [readOnly]="loading()"
       class="input"
       formControlName="password"
     />
   </div>
-  <app-button type="submit" class="mt-2">Iniciar sesión</app-button>
+  <app-button type="submit" [loading]="loading()" class="mt-2"
+    >Iniciar sesión</app-button
+  >
   <a
     href="#"
     class="text-center text-blue-500 text-base font-semibold hover:text-blue-400"
