--- a/src/app/modules/shared/components/button/button.component.html
+++ b/src/app/modules/shared/components/button/button.component.html
@@ -1,8 +1,26 @@
 <button
-  class="w-full text-lg px-6 py-1.5 rounded-xl font-semibold focus:outline-none focus:ring-4 disabled:opacity-50"
+  class="w-full flex items-center justify-center gap-1.5 text-lg px-6 py-1.5 rounded-xl font-semibold focus:outline-none focus:ring-4 disabled:opacity-95"
   [ngClass]="getColor"
   [type]="type"
-  [disabled]="disabled"
+  [disabled]="disabled || loading"
 >
-  <ng-content></ng-content>
+  <ng-content *ngIf="!loading"></ng-content>
+  <div
+    *ngIf="loading"
+    role="status"
+    class="flex justify-center items-center gap-1.5"
+  >
+    <div
+      class="flex justify-center items-center w-6 h-6 bg-gradient-to-t from-stone-50 to-stone-300 rounded-full animate-spin"
+    >
+      <div
+        class="w-4 h-4 rounded-full"
+        [ngClass]="{
+          'bg-violet-600': color === 'primary',
+          'bg-neutral-600': color === 'neutral'
+        }"
+      ></div>
+    </div>
+    <span>Cargando...</span>
+  </div>
 </button>
