--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -12,7 +12,7 @@ sus saldos y transferencias"
     Listado de plataformas registradas
   </h3>
   <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
-    <app-spinner [loading]="loading"></app-spinner>
+    <app-spinner *ngIf="loading()"></app-spinner>
     <app-platforms-list *ngIf="!loading()"></app-platforms-list>
   </div>
 </section>
