--- a/src/app/modules/shared/components/spinner/spinner.component.html
+++ b/src/app/modules/shared/components/spinner/spinner.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loading()" class="flex items-center justify-center" role="status">
+<div class="flex items-center justify-center" role="status">
   <div
     class="w-12 h-12 bg-gradient-to-t from-stone-300 to-stone-400 rounded-full animate-spin flex justify-center items-center"
   >
