--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,51 @@ body {
 .divider-md {
   @apply h-0.5 w-full bg-neutral-300;
 }
+
+.table {
+  @apply overflow-x-auto w-full;
+}
+
+.table > table {
+  @apply w-full;
+}
+
+.table > table thead tr {
+  @apply bg-gray-50;
+}
+
+.table > table thead tr th {
+  @apply text-gray-800 text-sm px-5 py-2 uppercase;
+}
+
+.table > table thead tr th.actions {
+  @apply w-28;
+}
+
+.table > table tbody tr {
+  @apply even:bg-gray-50 odd:bg-white hover:bg-gray-100;
+}
+
+.table > table tbody tr td:not(.table > table tbody tr td.actions) {
+  @apply text-gray-900 px-5 py-2;
+}
+
+.table > table tbody tr td.actions {
+  @apply px-5 py-2;
+}
+
+.table > table tbody tr td.actions > div {
+  @apply flex items-center justify-center gap-5 text-xl;
+}
+
+.table > table tbody tr td.actions > div * {
+  @apply cursor-pointer;
+}
+
+.table > table tbody tr td.actions > div .edit {
+  @apply text-yellow-500 hover:text-yellow-600;
+}
+
+.table > table tbody tr td.actions > div .remove {
+  @apply text-red-500 hover:text-red-600;
+}
