--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -25,22 +25,7 @@
       <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
         ¿A qué hora entraste?
       </h3>
-      <form
-        class="form"
-        [formGroup]="initialWorkingForm"
-        (ngSubmit)="setWorkingHours()"
-      >
-        <div class="control">
-          <label for="initialWorking">Hora de entrada</label>
-          <input
-            class="input"
-            type="time"
-            id="initialWorking"
-            formControlName="initialWorking"
-          />
-        </div>
-        <app-button type="submit" class="mt-3">Continuar</app-button>
-      </form>
+      <app-initial-working-form (setInitialWorking)="setWorkingHours($event)" />
     </section>
     <section class="flex items-center justify-center" *ngIf="countingBase()">
       <app-spinner *ngIf="registerLoading()"></app-spinner>
