--- a/src/app/modules/portal/pages/my-cash/cash-register-opening/entry-time/components/initial-working-form/initial-working-form.component.html
+++ b/src/app/modules/portal/pages/my-cash/cash-register-opening/entry-time/components/initial-working-form/initial-working-form.component.html
@@ -12,5 +12,15 @@
       formControlName="initialWorking"
     />
   </div>
-  <app-button type="submit" class="mt-3">Continuar</app-button>
+  <div class="w-full mt-3 grid grid-cols-3 gap-5">
+    <app-icon-button
+      type="button"
+      [icon]="faReturn"
+      color="neutral"
+      (click)="emitReturn()"
+      class="col-span-1"
+      >Regresar</app-icon-button
+    >
+    <app-button type="submit" class="col-span-2">Continuar</app-button>
+  </div>
 </form>
