--- a/src/app/modules/portal/pages/cash-registers/my-cash-registers/my-cash-registers.component.html
+++ b/src/app/modules/portal/pages/cash-registers/my-cash-registers/my-cash-registers.component.html
@@ -1,52 +1,78 @@
-<app-header-title
-  hTitle="Mis Cajas"
-  hDescription="Visualiza las cajas que haz usado en el día y sus reportes"
-/>
-<section class="flex items-center justify-around">
-  <h3 class="text-gray-800 text-xl font-medium">Reportes</h3>
-  <form>
-    <label for="selectCashRegister" class="sr-only">Selecciona una caja</label>
-    <select
-      id="selectCashRegister"
-      class="input"
-      (change)="handleSelectedCashRegister($event)"
-    >
-      <option disabled selected>Selecciona una caja</option>
-      <option
-        [value]="i"
-        *ngFor="
-          let report of myCashRegisters()?.cashRegisterDetailsReports;
-          index as i
-        "
+<header
+  class="relative -ml-6 w-[calc(100vw-14rem)] px-10 pt-4 pb-16 bg-violet-200 space-y-4"
+>
+  <div class="flex items-center justify-between">
+    <h3 class="text-gray-800 text-xl font-medium">Reportes</h3>
+    <form>
+      <label for="selectCashRegister" class="sr-only"
+        >Selecciona una caja</label
       >
-        Caja {{ report.cashRegisterDetail.cashRegisterNumeral }}
-      </option>
-      <option value="all">Todas</option>
-    </select>
-  </form>
-</section>
-<div class="divider my-5"></div>
-<section class="grid grid-cols-3 gap-11" *ngIf="selectedCashRegister()">
-  <div class="card flex flex-col gap-3">
-    <h3 class="text-lg text-gray-700 font-medium">Saldo en caja</h3>
-    <p class="text-2xl text-gray-700 text-right font-medium">
-      {{ selectedCashRegister()?.balance | currency : "symbol" : "$" : "0.00" }}
-    </p>
+      <select
+        id="selectCashRegister"
+        class="input shadow"
+        (change)="handleSelectedCashRegister($event)"
+      >
+        <option disabled selected>Selecciona una caja</option>
+        <option
+          [value]="i"
+          *ngFor="
+            let report of myCashRegisters()?.cashRegisterDetailsReports;
+            index as i
+          "
+        >
+          Caja {{ report.cashRegisterDetail.cashRegisterNumeral }}
+        </option>
+        <option value="all">Todas</option>
+      </select>
+    </form>
   </div>
-  <div class="card flex flex-col gap-3">
-    <h3 class="text-lg text-gray-700 font-medium">Depósitos</h3>
-    <p class="text-2xl text-green-700 text-right font-medium">
+  <div class="text-gray-700 flex items-center gap-7">
+    <p>
+      Entrada:
       {{
-        selectedCashRegister()?.deposits | currency : "symbol" : "$" : "0.00"
+        selectedCashRegister()?.cashRegisterDetail?.initialWorking ?? "--:--"
       }}
     </p>
-  </div>
-  <div class="card flex flex-col gap-3">
-    <h3 class="text-lg text-gray-700 font-medium">Retiros</h3>
-    <p class="text-2xl text-red-700 text-right font-medium">
-      {{
-        selectedCashRegister()?.withdrawals | currency : "symbol" : "$" : "0.00"
-      }}
+    <div class="h-5 w-px bg-violet-400"></div>
+    <p>
+      Almuerzo:
+      {{ selectedCashRegister()?.cashRegisterDetail?.initialBreak ?? "--:--" }}
+      -
+      {{ selectedCashRegister()?.cashRegisterDetail?.finalBreak ?? "--:--" }}
+    </p>
+    <div class="h-5 w-px bg-violet-400"></div>
+    <p>
+      Salida:
+      {{ selectedCashRegister()?.cashRegisterDetail?.finalWorking ?? "--:--" }}
     </p>
   </div>
-</section>
+  <div class="absolute left-5 right-5 grid grid-cols-3 gap-11">
+    <div class="card flex flex-col gap-3">
+      <h3 class="text-lg text-gray-700 font-medium">Saldo en caja</h3>
+      <p class="text-2xl text-gray-700 text-right font-medium">
+        {{
+          selectedCashRegister()?.balance ?? 0
+            | currency : "symbol" : "$" : "0.00"
+        }}
+      </p>
+    </div>
+    <div class="card flex flex-col gap-3">
+      <h3 class="text-lg text-gray-700 font-medium">Depósitos</h3>
+      <p class="text-2xl text-green-700 text-right font-medium">
+        {{
+          selectedCashRegister()?.deposits ?? 0
+            | currency : "symbol" : "$" : "0.00"
+        }}
+      </p>
+    </div>
+    <div class="card flex flex-col gap-3">
+      <h3 class="text-lg text-gray-700 font-medium">Retiros</h3>
+      <p class="text-2xl text-red-700 text-right font-medium">
+        {{
+          selectedCashRegister()?.withdrawals ?? 0
+            | currency : "symbol" : "$" : "0.00"
+        }}
+      </p>
+    </div>
+  </div>
+</header>
